fix: pricing buttons misalignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -573,6 +573,8 @@ section.features {
 /*Pricing card*/
 
 .pricingcard {
+  display:flex;
+  flex-direction: column;
   height: 100%;
   background-color: white;
   -webkit-box-shadow: 0px 8px 26px 2px rgba(0, 0, 0, 0.01);
@@ -580,6 +582,7 @@ section.features {
   border: 1px solid #eee;
   border-radius: 8px;
   transition: all 0.625s cubic-bezier(0, 0, 0.2, 1);
+  padding: 0.75rem 1rem;
 }
 
 .pricingcard-price strike {
@@ -598,7 +601,7 @@ section.features {
 .pricing-card-header {
   border-radius: 8px 8px 0 0;
   background-color: white;
-  padding: 0.75rem 1.25rem 0 1.25rem;
+  padding: 0 1.25rem;
   margin-bottom: 0;
   min-height: 130px;
 }
@@ -610,6 +613,7 @@ section.features {
 
 .pricing-card-body {
   padding: 0 1em 0 1em;
+  flex: 1 0 auto;
 }
 
 .pricing h5 {
